--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,15 +20,16 @@ body {
   position: sticky;
   display: flex;
   justify-content: center;
-  padding: 10px;
+  padding: 15px;
   width: 100%;
-  height: 50px;
   margin-right: 100px;
   margin-bottom: 16px;
   background: rgb(199, 157, 192);
 }
-.submit-btn {
+.btn {
+  padding: 10px;
   margin-left: 10px;
+  color: #2e242d;
   background-color: rgb(202, 202, 237);
   border-radius: 5px;
   border-color: rgb(228, 236, 234);
@@ -39,6 +40,7 @@ body {
   justify-content: center;
   margin-left: -10px;
   margin-top: -20px;
+  margin-bottom: 35px;
 }
 .photo-card {
   flex-basis: calc((100% - 40px) / 4);
@@ -68,4 +70,14 @@ body {
   display: flex;
   flex-direction: column;
   font-weight: 500;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: 0;
+}
+.visible {
+  display: block;
+  margin: auto;
+  opacity: 1;
+  visibility: 1;
 }
